Add manual trigger for OHLCV data seeding in DevDataSeeder